# Claude-Agent-System

./: .gitignore  APPLY_ON_LOCAL_MACHINE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_FIXES.md  DOWNLOAD_CHECKLIST.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  LOCAL_MACHINE_FIXES.md  QUICK_FIX_GUIDE.md  QUICK_START.md  README.md  RECOMMENDED_MODELS.md  SPEED_AND_GENERAL_PURPOSE_FIXES.md  USAGE.md  auto_fix.py  critical_fixes.patch  main.py  pyproject.toml  start_server.py  test_fixes.py  test_tool_results_fix.py
agent/: agent_core.py  context_manager.py  error_recovery.py  ollama_client.py  tool_executor.py
agent/prompts/: system_prompt.py
cli/: commands.py  interface.py  renderer.py
config/: agent_config.yaml  permissions_config.yaml  tools_config.yaml
mcp_server/: server.py
mcp_server/permissions/: __init__.py  access_control.py  validators.py
mcp_server/tools/: __init__.py  file_tools.py  search_tools.py  shell_tools.py  web_tools.py
mcp_server/utils/: __init__.py  error_handlers.py  logger.py
tests/: test_agent_core.py  test_file_tools.py  test_tool_executor.py
